# FastCast

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  benchmark.cpp  fastcast.hpp  tests.cpp  utilities.hpp
.github/workflows/: action.yml
benchmark/: benchmark.cpp
tests/: tests.cpp  utilities.hpp
